--- a/app/src/main/res/layout/activity_buscar.xml
+++ b/app/src/main/res/layout/activity_buscar.xml
@@ -263,6 +263,7 @@
                 android:id="@+id/b6"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:onClick="actualizar"
                 android:text="Actualizar" />
 
         </LinearLayout>
