--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="9dp"
-        android:layout_marginBottom="23dp"
+        android:layout_marginBottom="22dp"
         android:backgroundTint="#233B94"
         android:text="Agregar a la Agenda"
         app:layout_constraintBottom_toTopOf="@+id/bt2"
@@ -36,11 +36,11 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginStart="36dp"
-        android:layout_marginBottom="230dp"
+        android:layout_marginBottom="18dp"
         android:backgroundTint="#233B94"
         android:onClick="usarCalculadora"
         android:text="Calculadora"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/btListado"
         app:layout_constraintStart_toStartOf="@+id/bt2"
         app:layout_constraintTop_toBottomOf="@+id/bt2" />
 
@@ -59,4 +59,16 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/btListado"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="13dp"
+        android:layout_marginBottom="164dp"
+        android:backgroundTint="#233B94"
+        android:text="Listado"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="@+id/bt3"
+        app:layout_constraintTop_toBottomOf="@+id/bt3" />
 </androidx.constraintlayout.widget.ConstraintLayout>
