--- a/app/src/main/res/layout/activity_listado.xml
+++ b/app/src/main/res/layout/activity_listado.xml
@@ -7,63 +7,76 @@
     android:layout_height="match_parent"
     tools:context=".Listado">
 
-    <TableLayout
-        android:id="@+id/tableLayout2"
+    <ScrollView
         android:layout_width="0dp"
-        android:layout_height="462dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginEnd="1dp"
-        android:orientation="horizontal"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintEnd_toEndOf="parent">
 
-        <TableRow
-            android:layout_width="76dp"
+        <HorizontalScrollView
+            android:layout_width="match_parent"
             android:layout_height="wrap_content">
 
-            <TextView
-                android:id="@+id/tvCedula"
-                android:layout_width="55dp"
-                android:layout_height="wrap_content"
-                android:text="Cedula" />
-
-            <TextView
-                android:id="@+id/tvNombre"
-                android:layout_width="65dp"
-                android:layout_height="wrap_content"
-                android:text="Nombre" />
-
-            <TextView
-                android:id="@+id/tvApellido"
-                android:layout_width="62dp"
-                android:layout_height="wrap_content"
-                android:text="Apellido" />
-
-            <TextView
-                android:id="@+id/tvEdad"
-                android:layout_width="45dp"
-                android:layout_height="wrap_content"
-                android:text="Edad" />
-
-            <TextView
-                android:id="@+id/tvMail"
-                android:layout_width="48dp"
-                android:layout_height="wrap_content"
-                android:text="Email" />
-
-            <TextView
-                android:id="@+id/tvTelefono"
+            <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Telefono" />
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/tvDeporte"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Deporte Fav" />
-        </TableRow>
+                <TableLayout
+                    android:id="@+id/tableLayout2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:stretchColumns="*">
 
-    </TableLayout>
+                    <TableRow>
+
+                        <TextView
+                            android:text="Cedula"
+                            android:padding="4dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:text="Nombre"
+                            android:padding="4dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:text="Apellido"
+                            android:padding="4dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:text="Edad"
+                            android:padding="4dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:text="Email"
+                            android:padding="4dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:text="Telefono"
+                            android:padding="4dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:text="Deporte Fav"
+                            android:padding="4dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" />
+                    </TableRow>
+
+                </TableLayout>
+            </LinearLayout>
+        </HorizontalScrollView>
+    </ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
